--- a/frontend/src/pages/Dash/Dash.css
+++ b/frontend/src/pages/Dash/Dash.css
@@ -1,10 +1,14 @@
 .filters{
     display: flex;
-    border: 1px solid red;
     justify-content: space-between;
 }
 
 .select{
     width: 50rem;
     margin: 0rem 1rem;
+}
+
+.button{
+    display: flex;
+    align-items: center;
 }
