Css do gráfico com dados mockados

--- a/frontend/src/pages/Dash/index.css
+++ b/frontend/src/pages/Dash/index.css
@@ -31,3 +31,16 @@
     align-items: center;
     margin: 15px
 }
+
+.graph-area{
+    display: flex;
+    justify-content: center;
+    width:100%;
+}
+
+.graph{
+    display:inherit;
+    justify-content: inherit;
+    width: 80%;
+    margin: 3rem
+}
